--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -106,10 +106,10 @@ Dieses Kapitel beschreibt das Anlegen von Aufträgen oder Angeboten über die Ko
 ==== Standardeinstellungen vornehmen
 
 Beim Anlegen von Aufträgen und Angeboten über die Kontaktübersicht werden Daten, wie zum Beispiel Adressen oder Mandanten, direkt aus dem Kontakt übernommen, wenn sie dort hinterlegt sind. Die Kontaktdaten haben in der Regel also Priorität. Zusätzlich stehen dir einige Standardeinstellungen zur Verfügung, auf die zurückgegriffen wird, wenn eine Information nicht aus dem Kontakt genommen wird. +
-Um die Auftragsanlage zu erleichtern und schneller vorgehen zu können, solltest du zunächst diese Standardeinstellungen festlegen. *_Beachte_*, dass die Standardeinstellungen auch für über diese Benutzeroberfläche angelegte Angebote gelten.
+Um die Auftragsanlage zu erleichtern und schneller vorgehen zu können, solltest du zunächst diese Standardeinstellungen festlegen. *_Beachte_*, dass die Standardeinstellungen auch für über diese Benutzeroberfläche angelegte Angebote gelten. Gehe folgendermaßen vor, um die Standardeinstellungen vorzunehmen.
 
 [.instruction]
-Gehe folgendermaßen vor, um die Standardeinstellungen vorzunehmen:
+Standardeinstellungen vornehmen:
 
 . Öffne das Menü *Einrichtung » Aufträge » Auftragstypen » Auftrag*.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-default-settings-order-contact>>.
@@ -327,7 +327,7 @@ Bei bestimmten Ländern, z.B. Vereinigtes Königreich, wird die Reihenfolge der 
 
 In diesem Schritt werden die Auftragsdetails nicht angezeigt. Erst im dritten Schritt, der Überprüfung, sind die Auftragsdetails wieder verfügbar. *_Beachte_* allerdings, dass dort lediglich die Versandart und die Versandkosten bearbeitet werden können.
 
-Um einen Auftrag abzuschließen und ihn anzulegen, müssen zunächst Artikel hinzugefügt werden. Führe eine Suche (material:search[]) aus, um die passenden Artikel zu finden und dann hinzuzufügen. Nutze außerdem Filter, um die Suche weiter einzugrenzen.
+Um einen Auftrag abzuschließen und anzulegen, müssen zunächst Artikel hinzugefügt werden. Führe eine Suche (material:search[]) aus, um die passenden Artikel zu finden und dann hinzuzufügen. Nutze außerdem Filter, um die Suche weiter einzugrenzen.
 
 Zusätzlich kannst du die Optionen *Nur aktive Artikel anzeigen*, *Nur vorrätige Artikel anzeigen*, *Nur Vertriebslager anzeigen* und *Nur Artikel mit gültigem Preis anzeigen* wählen. Wenn wie oben beschrieben deine Lagereinstellung in den Grundeinstellungen *a) pro Auftrag kann ein Lager zugeordnet werden* ist, steht dir die Option *Nur Vertriebslager anzeigen* nicht zur Verfügung, weil du das Lager bereits vorher bestimmt hast. Zudem greifen bei der Suche die xref:auftraege:auftraege-verwalten.adoc#250[Standardeinstellungen], die du vorher vorgenommen hast.
 
@@ -368,6 +368,18 @@ Klicke dann auf material:search[], um die Suche auszuführen.
 | *Artikel-Tag*
 |Filtert nach dem Tag des Artikels.
 
+| *Nur vorrätige Artikel anzeigen*
+|Filtert nur nach Artikeln, die vorrätig sind.
+
+| *Nur aktive Artikel anzeigen*
+|Filtern nur nach Artikeln, die aktiv sind.
+
+| *Nur Vertriebslager anzeigen*
+|Filtert nur nach Vertriebslagern.
+
+| *Nur Artikel mit gültigem Preis anzeigen*
+|Filtert nur nach Artikeln mit gültigem Preis.
+
 |===
 
 [#save-search-settings]
@@ -396,7 +408,7 @@ Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und ein
 
 ===== Tabelle individualisieren
 
-Die Artikeltabelle ist individuell anpassbar. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen dir in den Tabellenspalten angezeigt werden. Gehe dafür folgendermaßen vor:
+Die Artikeltabelle kann individuell gestaltet werden. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen dir in den Tabellenspalten angezeigt werden. Gehe dafür folgendermaßen vor:
 
 [.instruction]
 Tabelle individualisieren:
@@ -410,7 +422,7 @@ Tabelle individualisieren:
 Wenn du die Tabelle einmal angepasst hast, wird diese Auswahl gespeichert. Die Tabelle bleibt also gleich, auch wenn du diesen Auftrag abgeschlossen hast und weitere Aufträge anlegst. Du kannst das Layout jederzeit ändern. Die zur Verfügung stehenden Spalten findest du in <<table-overview-item-search>>. Dort ist zu jeder Spalte auch die Information hinterlegt, ob es sich um eine Standardspalte handelt. Standardspalten werden angezeigt, wenn die Tabelle nicht individualisiert ist.
 
 [[table-overview-item-search]]
-.Spalten Tabelle Artikelsuche
+.Tabellenspalten Artikel hinzufügen
 [cols="1,3"]
 |===
 |Einstellung |Erläuterung
@@ -432,7 +444,7 @@ Diese Spalte ist keine Standardspalte.
 Diese Spalte ist keine Standardspalte.
 
 |*Artikel-ID/Varianten-ID*
-|Diese Spalte zeigt dir die Artikel-ID und die Varianten-ID kombiniert und nicht in zwei separaten Spalten an. Wenn du auf die Artikel-ID oder die Varianten-ID klickst, gelangst du direkt in die Einstellungen des jeweiligen Artikels bzw. der Variante. +
+|Zeigt die Artikel-ID und die Varianten-ID kombiniert und nicht in zwei separaten Spalten an. Wenn du auf die Artikel-ID oder die Varianten-ID klickst, gelangst du direkt in die Einstellungen des jeweiligen Artikels bzw. der Variante. +
 Diese Spalte ist keine Standardspalte.
 
 |*Variantennummer*
@@ -440,29 +452,23 @@ Diese Spalte ist keine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 
 |*Artikelname*
-|Die am Artikel hinterlegte Beschreibung wird angezeigt. +
+|Zeigt die am Artikel hinterlegte Beschreibung an. +
 Diese Spalte ist eine Standardspalte.
 
 |*Attribute*
-|Die am Artikel hinterlegten Attribute werden angezeigt. +
+|Zeigt die am Artikel hinterlegten Attribute an. +
 Diese Spalte ist eine Standardspalte.
 
 |*Variantenname*
-|Der an der Variante hinterlegte Variantenname wird angezeigt. +
+|Zeigt den an der Variante hinterlegten Variantennamen an. +
 Diese Spalte ist eine Standardspalte.
 
 |*Barcode*
-|Barcodes werden angezeigt. +
+|Zeigt den Barcode des Artikels an. +
 Diese Spalte ist keine Standardspalte.
 
-|*Menge*
-|Gib die Menge ein, in der der Artikel dem Warenkorb hinzugefügt werden soll. Du kannst nur ganze Zahlen eingeben, negative Mengen oder Mengen, die den Nettobestand übersteigen, sind nicht erlaubt. In diesem Fall wird eine Fehlermeldung angezeigt. Wenn die hinzugefügte Menge den Nettobestand auf = oder niedriger setzt, wird der Statusbalken für die Bestandsanzeige auf rot gesetzt. +
-Bei Mengenänderungen ändert sich der Verkaufspreis, daher muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (material:add_shopping_cart[]) wieder verfügbar und die Artikel können hinzugefügt werden. +
-Dies ist eine Standardspalte.
-
-|*Verkaufspreis*
-|Der aus der xref:auftraege:auftraege-verwalten.adoc#intable-item-search-price-selection[Preisauswahl] gewählte Verkaufspreis für diesen Artikel wird angezeigt. +
-Dies ist eine Standardspalte.
+| *System-EK*
+|Zeigt den Einkaufspreis des Systems an.
 
 |[#intable-item-search-price-selection]*Preisauswahl*
 |In einer Dropdown-Liste werden dir alle für diesen Auftrag ermittelten Verkaufspreise angezeigt. Du kannst einen der angezeigten Preise wählen, der dann als Grundlage für die weiteren Auftragsberechnungen verwendet wird. Enthält der Preis einen Rabatt, wird dies hinter dem Preisnamen und dem Betrag angezeigt. Die Spalten *Kundenklassenrabatt* und *Kategorierabatt* zeigen den Prozentsatz des angewendeten Rabatts an. +
@@ -470,17 +476,27 @@ Eine manuelle Anpassung des Preises kannst du im xref:auftraege:auftraege-verwal
 Konnte kein gültiger Verkaufspreis ermittelt werden, wird *Kein gültiger Verkaufspreis* in der Dropdown-Liste angezeigt. Ohne gültigen Verkaufspreis kann der Auftrag nicht abgeschlossen werden. Lege daher den Artikel in den Warenkorb und passe den Preis dort manuell an. +
 Diese Spalte ist eine Standardspalte.
 
-|*Verfügbarkeit*
-|In dieser Spalte wird die Verfügbarkeit der Variante angezeigt. Das dargestellte Symbol hängt davon ab, welches du im Menü *Einrichtung » Artikel » Verfügbarkeit* vergeben hast. Weitere Informationen zu diesen Einstellungen findest du auf der Handbuchseite xref:artikel:verfuegbarkeiten.adoc#[Verfügbarkeiten]. +
-Diese Spalte ist eine Standardspalte.
+| *Kategorierabatt*
+|Zeigt den für den ausgewählten Verkaufspreis angewendeten Kategorierabatt in Prozent an. +
+Diese Spalte ist keine Standardspalte.
 
-|*Netto-WB*
-|Der Warenbestand für das ausgewählte Lager wird angezeigt. +
-Diese Spalte ist eine Standardspalte.
+| *Kundenklassenrabatt*
+|Zeigt den für den ausgewählten Verkaufspreis angewendeten Kundenklassenrabatt in Prozent an. +
+Diese Spalte ist keine Standardspalte.
 
-|*Lager*
-|Das Lager des Artikels wird angezeigt. +
-Diese Spalte ist eine Standardspalte.
+| *Verfügbarkeit*
+|Zeigt die Verfügbarkeit des Artikels an.
+
+| *Netto-WB*
+|Zeigt den Netto-Warenbestand des Artikels an.
+
+| *Lager*
+|Zeigt das Lager des Artikels an.
+
+|*Menge*
+|Gib die Menge ein, in der der Artikel dem Warenkorb hinzugefügt werden soll. Du kannst nur ganze Zahlen eingeben, negative Mengen oder Mengen, die den Nettobestand übersteigen, sind nicht erlaubt. In diesem Fall wird eine Fehlermeldung angezeigt. Wenn die hinzugefügte Menge den Nettobestand auf = oder niedriger setzt, wird der Statusbalken für die Bestandsanzeige auf rot gesetzt. +
+Bei Mengenänderungen ändert sich der Verkaufspreis, daher muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (material:add_shopping_cart[]) wieder verfügbar und die Artikel können hinzugefügt werden. +
+Diese Spalte wird standardmäßig angezeigt.
 
 |*Warenkorb-Icon*
 |Durch Klick auf den Warenkorb (material:add_shopping_cart[]) wird der Artikel in der ausgewählten *Menge* dem Warenkorb hinzugefügt. +
@@ -504,7 +520,7 @@ Artikel hinzufügen:
 [#shopping cart]
 ==== Warenkorb
 
-In der Tabelle des Warenkorbs kannst du sowohl die *Menge* als auch den *Verkaufspreis* anpassen. Sobald du die Angaben in einem der Felder änderst, müssen Aktualisierungen durchgeführt werden. Dies kannst du tun, indem du am jeweiligen Artikel auf *Verkaufspreis aktualisieren* (material:refresh[]) klickst. Oder du nutzt die Schaltfläche *Verkaufspreise aktualisieren* unterhalb des Warenkorb. Erst nach der Aktualisierung kannst du in den nächsten Schritt der Auftragsanlage weitergehen.
+In der Tabelle des Warenkorbs kannst du sowohl die *Menge* als auch den *Verkaufspreis* anpassen. Sobald du die Angaben in einem der Felder änderst, müssen Aktualisierungen durchgeführt werden. Dies kannst du tun, indem du am jeweiligen Artikel auf *Verkaufspreis aktualisieren* (material:refresh[]) klickst. Oder du nutzt die Schaltfläche *Verkaufspreise aktualisieren* unterhalb des Warenkorbs. Erst nach der Aktualisierung kannst du in den nächsten Schritt der Auftragsanlage weitergehen.
 
 Folgendes gilt für Verkaufspreise:
 
@@ -521,28 +537,86 @@ Nachdem du alle gewünschten Artikel im Warenkorb abschließend bearbeitet hast,
 [.collapseBox]
 .*Warenkorbtabelle individualisieren*
 --
-Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen. Standardmäßig werden dir beim Öffnen des Menüs folgende Tabellenspalten angezeigt:
+Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen.
 
-* Artikel-ID/Varianten-ID
-* Varianten Nr.
-* Artikelname
-* Attribute
-* System-EK
-* Preis
-* Aufpreis gesamt = Die Summe der Aufpreise für Bestelleigenschaften.
-* Gesamtsumme = Der Artikelpreis zuzüglich Aufpreise für Bestelleigenschaften.
-* Rabatt = Beinhaltet den Rabatt, der in den Auftragsdetails im ersten Schritt der Auftragsanlage eingegeben wurde.
-* Lager
-* Menge
-* Aktion
+[[table-shopping-cart]]
+.Tabellenspalten Warenkorb
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
 
-Die folgenden Tabellenspalten können ebenfalls ausgewählt werden, sind standardmäßig aber nicht sichtbar:
+| *Menge*
+|Zeigt die Menge der Artikel an. Passe die Menge bei Bedarf an.
 
-* Artikel-ID
-* Varianten-ID
-* Preisauswahl
-* Kundenklassenrabatt = Der für den ausgewählten Verkaufspreis angewendete Kundenklassenrabatt in Prozent.
-* Kategorierabatt = Der für den ausgewählten Verkaufspreis angewendete Kategorierabatt in Prozent.
+| *Artikel-ID*
+|Zeigt die Artikel-ID an. Mit Klick auf die ID wird der Artikel geöffnet. +
+Diese Spalte wird standardmäßig nicht angezeigt.
+
+| *Varianten-ID*
+|Zeigt die Varianten-ID der Auftragsposition an. Mit Klick auf die ID wird die Variante geöffnet. +
+Diese Spalte wird standardmäßig nicht angezeigt.
+
+| *Artikel-ID* / *Varianten-ID*
+|Zeigt sowohl die Artikel-ID als auch die Varianten-ID an.
+
+| *Variantennummer*
+|Zeigt die Nummer der Variante an.
+
+| *Artikelname*
+|Zeigt den Namen des Artikels an. Passe den Namen bei Bedarf an (material:edit[]).
+
+| *Attribute*
+|Zeigt die Attribute an.
+
+| *Variantenname*
+|Zeigt den Namen der Variante an.
+
+| *Barcode*
+|Zeigt den Barcode des Artikels an.
+
+| *System-EK*
+|Zeigt den Einkaufspreis des Systems an.
+
+| *Preisauswahl*
+|Zeigt die Preisauswahl an. Wähle bei Bedarf eine andere Preisauswahl aus der Dropdown-Liste. +
+Diese Spalte wird standardmäßig nicht angezeigt.
+
+| *Kategorierabatt*
+|Zeigt den für den ausgewählten Verkaufspreis angewendeten Kategorierabatt in Prozent an. +
+Diese Spalte wird standardmäßig nicht angezeigt.
+
+| *Kundenklassenrabatt*
+|Zeigt den für den ausgewählten Verkaufspreis angewendeten Kundenklassenrabatt in Prozent an. +
+Diese Spalte wird standardmäßig nicht angezeigt.
+
+| *Nettopreis*
+|Zeigt den Nettopreis des Artikels an. +
+Über material:edit[] kannst du das Datenfeld Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst.
+
+| *Regulärer Nettopreis*
+|Zeigt den regulären Nettopreis des Artikels an.
+
+| *Bruttopreis*
+|Zeigt den Bruttopreis des Aritkels an. +
+Über material:edit[] kannst du das Datenfeld Bruttopreis bearbeiten. Der Nettopreis wird automatisch angepasst.
+
+| *Aufpreis gesamt*
+|Zeigt die Summe der Aufpreise für Bestelleigenschaften an.
+
+| *Rabatt*
+|Zeigt den Rabatt an, der in den Auftragsdetails im ersten Schritt der Auftragsanlage eingegeben wurde.
+
+| *Gesamtbetrag (brutto)*
+|Zeigt den Brutto-Gesamtbetrag des Artikels an.
+
+| *Lager*
+|Zeigt das Lager des Artikels an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste.
+
+|*USt. (%)*
+|Die Umsatzsteuer wird in % angezeigt. +
+Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern.
+
+|===
 
 Passe die Tabelle deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabelle jederzeit anpassen.
 
@@ -551,7 +625,7 @@ Tabelle individualisieren:
 
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* wird geöffnet.
-. Wähle, welche Spalten angezeigt werden sollen.
+. Wähle die Spalten, die angezeigt werden sollen.
 . Verschiebe (material:sort[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
@@ -644,7 +718,7 @@ Tabelle individualisieren:
 
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* wird geöffnet.
-. Wähle, welche Spalten angezeigt werden sollen.
+. Wähle die Spalten, die angezeigt werden sollen.
 . Verschiebe (material:sort[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
