--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -468,7 +468,8 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist keine Standardspalte.
 
 | *System-EK*
-|Zeigt den Einkaufspreis des Systems an.
+|Zeigt den Einkaufspreis des Systems an. +
+Diese Spalte ist //
 
 |[#intable-item-search-price-selection]*Preisauswahl*
 |In einer Dropdown-Liste werden dir alle für diesen Auftrag ermittelten Verkaufspreise angezeigt. Du kannst einen der angezeigten Preise wählen, der dann als Grundlage für die weiteren Auftragsberechnungen verwendet wird. Enthält der Preis einen Rabatt, wird dies hinter dem Preisnamen und dem Betrag angezeigt. Die Spalten *Kundenklassenrabatt* und *Kategorierabatt* zeigen den Prozentsatz des angewendeten Rabatts an. +
@@ -485,18 +486,21 @@ Diese Spalte ist keine Standardspalte.
 Diese Spalte ist keine Standardspalte.
 
 | *Verfügbarkeit*
-|Zeigt die Verfügbarkeit des Artikels an.
+|Zeigt die Verfügbarkeit des Artikels an. +
+Diese Spalte ist //
 
 | *Netto-WB*
-|Zeigt den Netto-Warenbestand des Artikels an.
+|Zeigt den Netto-Warenbestand des Artikels an. +
+Diese Spalte ist //
 
 | *Lager*
-|Zeigt das Lager des Artikels an.
+|Zeigt das Lager des Artikels an. +
+Diese Spalte ist //
 
 |*Menge*
 |Gib die Menge ein, in der der Artikel dem Warenkorb hinzugefügt werden soll. Du kannst nur ganze Zahlen eingeben, negative Mengen oder Mengen, die den Nettobestand übersteigen, sind nicht erlaubt. In diesem Fall wird eine Fehlermeldung angezeigt. Wenn die hinzugefügte Menge den Nettobestand auf = oder niedriger setzt, wird der Statusbalken für die Bestandsanzeige auf rot gesetzt. +
 Bei Mengenänderungen ändert sich der Verkaufspreis, daher muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (material:add_shopping_cart[]) wieder verfügbar und die Artikel können hinzugefügt werden. +
-Diese Spalte wird standardmäßig angezeigt.
+Diese Spalte ist eine Standardspalte.
 
 |*Warenkorb-Icon*
 |Durch Klick auf den Warenkorb (material:add_shopping_cart[]) wird der Artikel in der ausgewählten *Menge* dem Warenkorb hinzugefügt. +
@@ -546,75 +550,90 @@ Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche
 |Einstellung |Erläuterung
 
 | *Menge*
-|Zeigt die Menge der Artikel an. Passe die Menge bei Bedarf an.
+|Zeigt die Menge der Artikel an. Passe die Menge bei Bedarf an. +
+Diese Spalte ist //
 
 | *Artikel-ID*
 |Zeigt die Artikel-ID an. Mit Klick auf die ID wird der Artikel geöffnet. +
-Diese Spalte wird standardmäßig nicht angezeigt.
+Diese Spalte ist keine Standardspalte.
 
 | *Varianten-ID*
 |Zeigt die Varianten-ID der Auftragsposition an. Mit Klick auf die ID wird die Variante geöffnet. +
-Diese Spalte wird standardmäßig nicht angezeigt.
+Diese Spalte ist keine Standardspalte.
 
 | *Artikel-ID* / *Varianten-ID*
-|Zeigt sowohl die Artikel-ID als auch die Varianten-ID an.
+|Zeigt sowohl die Artikel-ID als auch die Varianten-ID an. +
+Diese Spalte ist //
 
 | *Variantennummer*
-|Zeigt die Nummer der Variante an.
+|Zeigt die Nummer der Variante an. +
+Diese Spalte ist //
 
 | *Artikelname*
-|Zeigt den Namen des Artikels an. Passe den Namen bei Bedarf an (material:edit[]).
+|Zeigt den Namen des Artikels an. Passe den Namen bei Bedarf an (material:edit[]). +
+Diese Spalte ist //
 
 | *Attribute*
-|Zeigt die Attribute an.
+|Zeigt die Attribute an. +
+Diese Spalte ist //
 
 | *Variantenname*
-|Zeigt den Namen der Variante an.
+|Zeigt den Namen der Variante an. +
+Diese Spalte ist //
 
 | *Barcode*
-|Zeigt den Barcode des Artikels an.
+|Zeigt den Barcode des Artikels an. +
+Diese Spalte ist //
 
 | *System-EK*
-|Zeigt den Einkaufspreis des Systems an.
+|Zeigt den Einkaufspreis des Systems an. +
+Diese Spalte ist //
 
 | *Preisauswahl*
 |Zeigt die Preisauswahl an. Wähle bei Bedarf eine andere Preisauswahl aus der Dropdown-Liste. +
-Diese Spalte wird standardmäßig nicht angezeigt.
+Diese Spalte ist keine Standardspalte.
 
 | *Kategorierabatt*
 |Zeigt den für den ausgewählten Verkaufspreis angewendeten Kategorierabatt in Prozent an. +
-Diese Spalte wird standardmäßig nicht angezeigt.
+Diese Spalte ist keine Standardspalte.
 
 | *Kundenklassenrabatt*
 |Zeigt den für den ausgewählten Verkaufspreis angewendeten Kundenklassenrabatt in Prozent an. +
-Diese Spalte wird standardmäßig nicht angezeigt.
+Diese Spalte ist keine Standardspalte.
 
 | *Nettopreis*
 |Zeigt den Nettopreis des Artikels an. +
-Über material:edit[] kannst du das Datenfeld Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst.
+Über material:edit[] kannst du das Datenfeld Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst. +
+Diese Spalte ist //
 
 | *Regulärer Nettopreis*
-|Zeigt den regulären Nettopreis des Artikels an.
+|Zeigt den regulären Nettopreis des Artikels an. +
+Diese Spalte ist //
 
 | *Bruttopreis*
-|Zeigt den Bruttopreis des Aritkels an. +
-Über material:edit[] kannst du das Datenfeld Bruttopreis bearbeiten. Der Nettopreis wird automatisch angepasst.
+|Zeigt den Bruttopreis des Aritkels an. Über material:edit[] kannst du das Datenfeld Bruttopreis bearbeiten. Der Nettopreis wird automatisch angepasst. +
+Diese Spalte ist //
 
 | *Aufpreis gesamt*
-|Zeigt die Summe der Aufpreise für Bestelleigenschaften an.
+|Zeigt die Summe der Aufpreise für Bestelleigenschaften an. +
+Diese Spalte ist //
 
 | *Rabatt*
-|Zeigt den Rabatt an, der in den Auftragsdetails im ersten Schritt der Auftragsanlage eingegeben wurde.
+|Zeigt den Rabatt an, der in den Auftragsdetails im ersten Schritt der Auftragsanlage eingegeben wurde. +
+Diese Spalte ist //
 
 | *Gesamtbetrag (brutto)*
-|Zeigt den Brutto-Gesamtbetrag des Artikels an.
+|Zeigt den Brutto-Gesamtbetrag des Artikels an. +
+Diese Spalte ist //
 
 | *Lager*
-|Zeigt das Lager des Artikels an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste.
+|Zeigt das Lager des Artikels an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste. +
+Diese Spalte ist //
 
 |*USt. (%)*
 |Die Umsatzsteuer wird in % angezeigt. +
-Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern.
+Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern. +
+Diese Spalte ist //
 
 |===
 
