--- a/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
@@ -12,7 +12,7 @@ Du hast zwei Möglichkeiten, die Katalogdaten manuell zu exportieren:
 
 | Live-Download
 | Die Datei wird automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Exports in Echtzeit verfolgen. +
-*_Aber:_* Das plentymarkets Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export gestoppt.
+*_Aber:_* Das Browser-Tab und das plentymarkets Tab *Datenexport* dürfen nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export gestoppt.
 |===
 
 [tabs]
@@ -51,7 +51,7 @@ Live-Download starten::
 //tag::live-download[]
 Beim Live-Download wird die Datei erstellt und auch gleich automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Downloads in Echtzeit im Tab *Datenexport* verfolgen. Aber:
 
-* Das Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export angehalten.
+* Wenn du den Live-Download startest, wird ein neues Browser-Tab geöffnet. In diesem Browser-Tab wird das plentymarkets Tab *Datenexport* angezeigt. Während der Export läuft, dürfen das Browser-Tab und das plentymarkets Tab *Datenexport* nicht geschlossen oder neu geladen werden. Wenn du es doch tust, wird der Export angehalten.
 * Du kannst Live-Download mehrerer Kataloge gleichzeitig durchführen. Einen neuen Live-Download für denselben Katalog kannst du aber erst starten, wenn der laufende Export abgeschlossen ist.
 
 [.instruction]
@@ -62,9 +62,10 @@ Live-Download starten:
 . Öffne den Katalog.
 . Klicke in der Symbolleiste oben auf *Live-Download* (material:play_circle_outline[]). +
 *_Oder:_* Noch schneller geht es, wenn du den Live-Download über die *Weiteren Aktionen* (material:more_vert[]) in der Katalogübersicht startest. +
-→ Das Tab *Datenexport* wird geöffnet. +
+→ Ein neues Browser-Tab wird geöffnet. plentymarkets und das Tab *Datenexport* werden angezeigt. +
+*_Kein neues Tab?_* Dann hast du wahrscheinlich einen Pop-up-Blocker im Einsatz. Erlaube Pop-ups für dein System und es kann losgehen. +
 → Der Export wird gestartet. +
-*_Wichtig:_* Das Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export angehalten. +
+*_Wichtig:_* Das Browser-Tab und das plentymarkets Tab *Datenexport* dürfen nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export angehalten. +
 → Der Fortschritt wird in Echtzeit angezeigt. +
 → Wenn der Export abgeschlossen ist, wirst die Datei automatisch auf deinem Rechner gespeichert.
 
