--- a/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
@@ -12,7 +12,7 @@ There are two ways to manually export the catalogue data:
 
 | Live download
 | The file is downloaded to your computer automatically. You can follow the export progress in real time. +
-*_However:_* Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do so, the export will be cancelled.
+*_However:_* Do not close or reload the browser tab or the plentymarkets tab *Data export* while the export is in progress. If you do so, the export will be cancelled.
 |===
 
 [tabs]
@@ -34,7 +34,7 @@ Starting an asynchronous download:
 *_Or:_* Even quicker: Start the download from the *Additional actions* (material:more_vert[]) in the catalogue overview. +
 → The export starts. +
 *_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
-→ Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
+Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
 . In the notification centre, click on material:link[] *Download*. +
 *_Tip:_* The notification is no longer shown? Use the URL shown in the *Download settings* to access the file at any time.
 . Save the file on your computer.
@@ -51,7 +51,7 @@ Starting a live download::
 //tag::live-download[]
 The live download creates the file and automatically downloads it to your computer. In the tab *Data export*, you can follow the download progress in real time. However:
 
-* Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do, the export stops and is cancelled.
+* When you start the live download, a new browser tab opens. In this browser tab, the plentymarkets tab *Data export* is shown. Do not close or reload the browser tab and the plentymarkets tab *Data export* while the export is in progress. If you do, the export stops and is cancelled.
 * You can start live downloads for several catalogues at the same time. However, you can only start a new live download for the same catalogue once the current export is complete.
 
 [.instruction]
@@ -62,9 +62,10 @@ Starting a live download:
 . Open the catalogue.
 . In the toolbar at the top, click on *Live download* (material:play_circle_outline[]). +
 *_Or:_* Even quicker: Start the download from the *Additional actions* (material:more_vert[]) in the catalogue overview. +
-→ The tab *Data export* opens. +
+→ a new browser tab opens. plentymarkets and the tab *Data export* are shown. +
+*_No new tab?_* Then you are probably using a pop-up blocker. Allow pop-ups for your system to continue. +
 → The export starts. +
-*_Important:_* Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do, the export stops and is cancelled. +
+*_Important:_* Do not close or reload the browser tab or the plentymarkets tab *Data export* while the export is in progress. If you do, the export stops and is cancelled. +
 → The progress is shown in real time. +
 → The file is automatically saved on your computer when the export is done.
 
