--- a/docs/de-de/modules/external-online-shops/pages/shopify-plugin.adoc
+++ b/docs/de-de/modules/external-online-shops/pages/shopify-plugin.adoc
@@ -337,27 +337,27 @@ Die Varianten-Einstellung *Beschränkung* wird auf das Shopify-Eingabefeld *Verk
 [#benutzerdefinierte-auftragseigenschaften]
 === Benutzerdefinierte Auftragseigenschaften importieren
 
-Mit dem Plugin können auch die benutzerdefinierten Auftragseigenschaften aus der Shopify-Bestellung importiert werden. Wie zum Beispiel mit dem link:https://apps.shopify.com/product-personalizer[Product Personalizer-Plugin^], mit dem du Kunden-Notizen für personalisierte Produkte aufnehmen kannst.
+Mit dem Shopify-Plugin können auch benutzerdefinierte Auftragseigenschaften aus der Shopify-Bestellung importiert werden. Zum Beispiel mit dem link:https://apps.shopify.com/product-personalizer[Product Personalizer-Plugin^], mit dem du Kunden-Notizen für personalisierte Produkte aufnehmen kannst.
 
-Um solche Eigenschaften zu importieren, stelle sicher, dass der plentymarkets Artikel ein *Merkmal* mit der Option *Bestellmerkmal* auf *An* enthält. Das Plugin wird dieses Merkmal verwenden, um zu erkennen, dass die Personalizer-Plugin-Notiz auch importiert werden muss.
+Um solche Eigenschaften zu importieren, muss der Artikel in plentymarkets ein *Merkmal* mit der Option *Bestellmerkmal* auf *An* enthalten. Das Merkmal wird benötigt, damit das Shopify-Plugin die Personalizer-Plugin-Notiz mit importiert.
 
 [#versandprofil-zuordnungen]
-=== Versandprofil-Zuordnungen einrichten
+=== Versandprofile zuordnen
 
-Ermöglicht es dem *Auftragsimport*, die Versandprofile von Shopify und plentymarkets miteinander zu verknüpfen.
+Verknüpfe nun die plentymarkets Versandprofile mit den Versandprofilen in Shopify.
 
 [.instruction]
 Versandprofile zuordnen:
 
 . Öffne das Menü *Einrichtung » Märkte » Shopify » Versandprofil Zuordnungen*.
-. Wähle einen Webshop, für den du diese Funktion konfigurieren möchtest.
+. Wähle einen Webshop.
 . Wähle ein Shopify-*Versandprofil*.
 . Wähle ein plentymarkets *Versandprofil*.
 . *Speichere* die Einstellungen. +
 → Die neue Verknüpfung wird in der Liste der Zuordnungen angezeigt.
 
 [#eingabefeld-zuordnungen]
-=== Eingabefeld-Zuordnungen festlegen
+=== Shopify-Eingabefelder zuordnen
 
 Wähle, welche plentymarkets Daten auf bestimmte Shopify-Eingabefelder exportiert werden sollen.
 
@@ -370,7 +370,7 @@ Eingabefelder zuordnen:
 . Wähle ein plentymarkets *Eingabefeld*.
 . *Speichere* die Einstellungen. +
 → Die neue Verknüpfung wird in der Liste der Zuordnungen angezeigt. +
-*_Hinweis:_* Eingabefeld-Zuordnungen sind nur für den Prozess *Artikelexport* verfügbar.
+*_Hinweis:_* Eingabefeld-Zuordnungen sind nur für den Artikelexport verfügbar.
 
 [[tabelle-shopify-eingabefeldzuordnungen]]
 .Eingabefeldzuordnungen
@@ -407,64 +407,65 @@ Eingabefelder zuordnen:
 * Gewicht Brutto
 
 | *Metafield on Product Variant*
-| Ermöglicht den Export von Varianten-*Verfügbarkeit*-Name / einer *Eigenschaft* zu einem benutzerdefinierten *Metafeld*. +
+| Ermöglicht den Export von Varianten-*Verfügbarkeitsname* / einer *Eigenschaft* zu einem benutzerdefinierten *Metafeld*. +
 
 [.instruction]
+Metafeld zuordnen:
 
 . Wähle *Metafield on Product Variant*.
 . Lege einen *Namespace* fest. +
 → Der *Namespace* ist ein Container für ein Metafeld-Set. Du kannst einem Namespace-Container mehrere Metafelder zuweisen. +
 _Maximale Länge:_ 20 Zeichen.
-. Weise einen *Metafeld-Namen* zu.
+. Ordne einen *Metafeld-Namen* zu.
 . Wähle zwischen *Verfügbarkeit* und *Eigenschaft*. +
 *_Hinweis:_* Shopify-Metafelder sind im Shopify-Backend ohne spezielle Apps nicht sichtbar. Weitere Informationen zu Shopify-Metafeldern findest du im link:https://help.shopify.com/de[Shopify Help Center^].
 |===
 
-[#lagerzuordnungen]
-=== Lagerzuordnungen erstellen
+[#lager-zuordnen]
+=== Lager zuordnen
 
-Die Einrichtung dieser Funktion ist für einen funktionalen Warenbestandabgleich erforderlich. Diese Funktion hat nur einen Einfluss auf die Warenbestandabgleichsfunktionen und auf Instanzen, in denen die Ereignisaktion *Versandbestätigung an Shopify Senden* ausgeführt wird.
-Die Lagerzuordnung beim *Auftragsimport* ist von dieser Funktion nicht betroffen, sie wird vom System außerhalb der Plugin-Funktionen durchgeführt.
+Die Lagerzurodnung ist für einen funktionalen Warenbestandabgleich erforderlich. Diese Funktion hat nur einen Einfluss auf den Bestandsabgleich und die Ereignisaktion *Versandbestätigung an Shopify Senden*. +
+Die Lagerzuordnung beim Auftragsimport ist von dieser Funktion nicht betroffen. Sie wird vom System unabhängig vom Shopify-Plugin durchgeführt.
 
 [.instruction]
 Lager zuordnen:
 
 . Öffne das Menü *Einrichtung » Märkte » Shopify » Lager Zuordnungen*.
-. Wähle einen Webshop, für den du diese Funktion konfigurieren möchtest.
+. Wähle einen Webshop.
 . Klicke auf *Hinzufügen* (material:add[]).
 . Wähle ein oder mehrere plentymarkets *Lager*.
 . Wähle einen Shopify *Standort* aus.
 . *Speichere* die Einstellungen. +
 → Die neue Verknüpfung wird in der Liste der Zuordnungen angezeigt.
 
-[#tags-mit-kundenklassen-verknuepfen]
-=== Shopify-Kunden-Tags mit plentymarkets Kundenklassen verknüpfen
+[#tags-kundenklassen-zuordnung]
+=== Shopify-Kunden-Tags den plentymarkets Kundenklassen zuordnen
 
-Ermöglicht die Zuordnung von Shopify-Kunden-Tags zu einer plentymarkets Kundenklasse.
+Hier werden Shopify-Kunden-Tags einer plentymarkets Kundenklasse zugeordnet.
 
-*_Hinweis:_* Jedes Zuordnungselement kann nur einen Kunden-Tag enthalten. Mehrere Kunden-Tags können derselben plentymarkets Kundenklasse zugeordnet werden, indem separate Zuordnungselemente erstellt werden.
+*_Hinweis:_* Jede Zuordnung kann nur einen Kunden-Tag enthalten. Mehrere Kunden-Tags können derselben plentymarkets Kundenklasse zugeordnet werden, indem separate Zuordnungselemente erstellt werden.
 
 [.instruction]
-Kundenklassen verknüpfen:
+Kundenklassen zuordnen:
 
 . Öffne das Menü *Einrichtung » Märkte » Shopify » Kundenklassen Zuordnung.*
-. Wähle einen Webshop, für den du diese Funktion konfigurieren möchtest.
-. Trage einen Shopify *Kunden-Tag* ein.
+. Wähle einen Webshop.
+. Gib einen Shopify *Kunden-Tag* ein.
 . Wähle eine plentymarkets *Kundenklasse*.
 . *Speichere* die Einstellungen. +
-→ Die neue Verknüpfung wird in der Liste der Zuordnungen angezeigt.
+→ Die neue Zuordnung wird in der Liste der Zuordnungen angezeigt.
 
 [#plugin-hilfe]
 == Plugin-Hilfe konsultieren
 
-Mit den in dieser Registerkarte enthaltenen Funktionen kannst du:
+Im Tab *Hilfe* des Shopify-Plugins hast kannst du die folgenden Funktionen nutzen:
 
 * Die Plugin-Bereitschaft prüfen.
 * Varianten-Exportbedingungen prüfen.
 * Alle 10 Minuten einen Artikel manuell exportieren.
 * Alle 5 Minuten den Warenbestand einer Variante oder eines ganzen Artikels exportieren.
 * Die plentymarkets Auftrags-ID anhand der Shopify-Auftragsnummer finden.
-* Artikelexport-Cleanup programmieren.
+* Ein Artikelexport-Cleanup programmieren.
 
 [#plugin-bereitschaft]
 === Plugin-Bereitschaft prüfen
@@ -475,16 +476,15 @@ Plugin-Bereitschaft prüfen:
 . Öffne das Menü *Einrichtung » Märkte » Shopify » Hilfe » Plugin-Bereitschaft*.
 . Klicke auf *Prüfen*.
 
-Überprüfte Bedingungen sind:
+Die folgenden Bedingungen werden geprüft:
 
 * Die Herkunft *Shopify* muss unter *Einrichtung » Aufträge » Auftragsherkunft* aktiviert sein.
-* Es gibt mehr als eine *Shopify* Herkunft unter *Einrichtung » Aufträge » Auftragsherkunft*. Stelle sicher, dass die ID mit der höchsten Nummer
-aktiviert ist.
-* Eine Verbindung zu *Shopify.com* kann hergestellt werden.
-* *SDK-Datei* wird korrekt bereitgestellt.
+* Es gibt mehr als eine *Shopify*-Herkunft unter *Einrichtung » Aufträge » Auftragsherkunft*. Stelle sicher, dass die ID mit der höchsten Nummer aktiviert ist.
+* Eine Verbindung zu Shopify.com kann hergestellt werden.
+* Die *SDK-Datei* wird korrekt bereitgestellt.
 
-Erfüllten Bedingungen folgt ein grünes *OK*.
-Fehlgeschlagenen Bedingungen folgt ein rotes *X*.
+Erfüllte Bedingungen sind mit einem grünen *OK* markiert.
+Fehlgeschlagene Bedingungen sind mit einem roten *X* markiert.
 
 [#exportbedingungen-pruefen]
 === Exportbedingungen einer Variante prüfen
@@ -497,7 +497,7 @@ Exportbedingungen prüfen:
 . Gib eine gültige Varianten-ID ein.
 . Klicke auf *Überprüfen*.
 
-Folgende Bedingungen werden geprüft:
+Die folgenden Bedingungen werden geprüft:
 
 * Die Variante muss *aktiv* sein. +
 → *Artikel » Variante » Einstellungen »*, Bereich *Verfügbarkeit » Häkchen Aktiv* muss gesetzt sein.
@@ -505,23 +505,23 @@ Folgende Bedingungen werden geprüft:
 → *Artikel »Variante » Verfügbarkeit »*, Bereich *Märkte, Shopify* muss erteilt sein.
 * *Variante » Mandant Zuordnung* stimmt mit der *Webshop*-Auswahl überein. +
 → *Artikel » Variante » Verfügbarkeit »*, Bereich *Mandant » Mandant Auswahl*.
-* Der Artikel muss einen *Artikeltext* enthalten. +
+* Am Artikel muss ein *Artikeltext* gespeichert sein. +
 → *Artikel » Texte » Artikeltext* muss verfügbar sein.
-* Der Artikel muss *Name 1* enthalten. +
+* Am Artikel muss *Name 1* gespeichert sein. +
 → *Artikel » Texte » Name 1* muss verfügbar sein.
-* Die Variante muss eine SKU für Marktplatz Shopify enthalten. +
+* Die Variante muss eine SKU für Shopify enthalten. +
 → *Artikel » Variante » Verfügbarkeit »*, Bereich *SKU* muss eine *SKU* für die Herkunft *Shopify* enthalten.
 * Exportierte Artikel dürfen nicht mehr als 100 Varianten enthalten. Dies ist ein von Shopify auferlegtes Limit.
 
-Erfüllten Bedingungen folgt ein grünes *OK*.
-Fehlgeschlagenen Bedingungen folgt ein rotes *X*.
+Erfüllte Bedingungen sind mit einem grünen *OK* markiert.
+Fehlgeschlagene Bedingungen sind mit einem roten *X* markiert.
 
 *_Hinweis:_* Der Export des Artikelverkaufspreises ist nicht verpflichtend.
 
 [#artikel-manuell-exportieren]
 === Einen Artikel manuell exportieren
 
-Zu Testzwecken kannst du mit dem Plugin alle 10 Minuten einen Artikel manuell exportieren lassen.
+Zu Testzwecken kannst du mit dem Plugin alle 10 Minuten einen Artikel manuell exportieren.
 
 *_Hinweis:_* Verwende diese Funktion, um zu testen, wie Exporte aussehen, bevor Bulk-Exporte von Artikeldaten durchgeführt werden.
 
@@ -529,17 +529,17 @@ Zu Testzwecken kannst du mit dem Plugin alle 10 Minuten einen Artikel manuell ex
 Artikel manuell exportieren:
 
 . Öffne das Menü *Einrichtung » Märkte » Shopify » Hilfe »Artikelexport*.
-. Wähle einen Webshop, auf dem du den Artikel exportieren möchtest.
+. Wähle einen Webshop.
 . Gib eine gülitge Artikel-ID ein.
 . Klicke auf *Ausführen*. +
 → Wenn alle Exportbedingungen erfüllt sind, werden der Artikel und die dazugehörigen Varianten exportiert.
 
-*_Hinweis:_* Solltest du einen / mehrere Artikel auf Shopify gelöscht haben, um diese nochmals zu exportieren, beachte, dass ein erster Export die Plugin-Datenbank bereinigt - erst ein zweiter Export schreibt den Artikel nochmals auf Shopify.
+*_Hinweis:_* Solltest du einen oder mehrere Artikel auf Shopify gelöscht haben, um diese nochmals zu exportieren, dann beachte, dass ein erster Export die Plugin-Datenbank bereinigt. Erst ein zweiter Export schreibt den Artikel nochmals auf Shopify.
 
 [#warenbestand-export]
 == Tab: *Warenbestand Export*
 
-Zu Testzwecken kannst Du mit dem Plugin alle 5 Minuten Warenbestände für einen Artikel manuell exportieren. Für eine Variante kann der Export alle 3 Minuten erfolgen.
+Zu Testzwecken kannst du alle 5 Minuten Warenbestände für einen Artikel manuell exportieren. Für eine Variante kann der Export alle 3 Minuten erfolgen.
 
 [#benutzerdefiniertes-startdatum]
 === Benutzerdefiniertes Startdatum für Warenbestand und Preisexport festlegen
@@ -550,11 +550,11 @@ Wenn du Warenbestände für Artikel mit einem älteren *Letzte Änderung*-Datum 
 Startdatum festlegen:
 
 . Öffne das Menü *Einrichtung » Märkte » Shopify » Hilfe » Warenbestand Export*
-. Wähle einen Webshop, in dem das *Warenbestand und Preis Export* Startdatum zurückgesetzt werden soll.
+. Wähle einen Webshop, in dem das *Warenbestand und Preis Export*-Startdatum zurückgesetzt werden soll.
 . Wähle ein Startdatum aus dem *Kalender*.
 . Trage *Stunde* und *Minuten* ein.
 . *Speichere* die Einstellungen. +
-→ Der nächste *Warenbestand und Preis Export*-Lauf wird gemäß deiner Einrichtung ausgeführt. Beachte, dass das Startdatum immer aktualisiert wird, um den Start des letzten Laufs widerzuspiegeln.
+→ Der nächste *Warenbestand und Preis Export* wird gemäß deiner Einrichtung ausgeführt. Beachte, dass das Startdatum immer aktualisiert wird, um den Start des letzten Exports widerzuspiegeln.
 
 [#warenbestand-verkaufspreis-variante-exportieren]
 === Warenbestand und Verkaufspreis für eine Variante manuell exportieren
@@ -564,7 +564,7 @@ Warenbestand und Verkaufspreis für eine Variante exportieren:
 
 . Öffne das Menü *Einrichtung » Märkte » Shopify » Hilfe » Warenbestand Export*
 . Wähle einen Webshop, in dem du Warenbestände und Preise aktualisieren möchtest.
-. Trage eine gültige *Varianten-ID* ein.
+. Gib eine gültige *Varianten-ID* ein.
 . Klicke auf *Ausführen*. +
 → Wenn alle Exportbedingungen erfüllt sind, wird der Warenbestand für die eingetragene Variante exportiert.
 
@@ -583,7 +583,7 @@ Warenbestand und Verkaufspreis für einen Artikel exportieren:
 [#plentymarkets-id-finden]
 == plentymarkets Auftrags-ID anhand der Shopify-Bestell-ID finden
 
-Wenn ein:e Kund:in dich mit der Shopify-Bestell-ID kontaktiert, kannst du diese ID verwenden, um die entsprechende plentymarkets Auftrags-ID zu identifizieren.
+Wenn ein:e Kund:in dich mit der Shopify-Bestell-ID kontaktiert, kannst du diese ID verwenden, um die entsprechende plentymarkets Auftrags-ID zu finden.
 
 [arabic]
 . Öffne das Menü *Einrichtung » Märkte » Shopify » Hilfe » Auftragsnummer Suche*.
@@ -595,13 +595,13 @@ Wenn ein:e Kund:in dich mit der Shopify-Bestell-ID kontaktiert, kannst du diese 
 [#artikelexport-cleanup]
 == Artikelexport-Cleanup planen
 
-*_Hinweis:_* Verwende das Cleanup nicht, wenn deine Artikel nach der Installation des Plugins aus Shopify importiert wurden. Ein solcher Versuch kann zum Artikelverlust auf Shopify führen! Das Cleanup wird nur einmal ausgeführt, nachdem es geplant wurde. Plane nach Bedarf neue Cleanups.
-
 Plane ein Cleanup, wenn: 
 
-* Artikel / Varianten aus plentymarkets gelöscht wurden und diese auch aus Shopify entfernt werden sollen.
-* Artikel / Varianten manuell aus Shopify gelöscht wurden und das Plugin keinen neuen Export durchführt.
+* Artikel oder Varianten aus plentymarkets gelöscht wurden und diese auch aus Shopify entfernt werden sollen.
+* Artikel oder Varianten manuell aus Shopify gelöscht wurden und das Plugin keinen neuen Export durchführt.
 * Alle Shopify-Artikel gelöscht werden und ein neuer Export aus plentymarkets veranlasst werden soll. In diesem Fall deaktiviere den Artikelexport und lösche alle Artikel aus Shopify. Plane ein Cleanup. Am nächsten Morgen kannst du den Artikelexport reaktivieren.
+
+*_Hinweis:_* Verwende das Cleanup nicht, wenn deine Artikel nach der Installation des Plugins aus Shopify importiert wurden. Ein solcher Versuch kann zum Artikelverlust auf Shopify führen! Das Cleanup wird nur einmal ausgeführt, nachdem es geplant wurde. Plane nach Bedarf neue Cleanups.
 
 [.instruction]
 Cleanup planen:
@@ -613,13 +613,13 @@ Cleanup planen:
 *_Hinweis:_* Bereits exportierte Artikel und Varianten werden in den folgenden Fällen bei der Bereinigung aus Shopify gelöscht:
 
 * *Mandant (Client)* und *Shopify-Marktplatz* wurden aus deiner plentymarkets-Variante entfernt.
-* Variante wurde aus plentymarkets gelöscht.
+* Die Variante wurde aus plentymarkets gelöscht.
 * Sobald der Artikel keine aktiven Varianten hat, wird der gesamte Artikel auch auf Shopify gelöscht.
 
 [#ereignisaktionen]
 == Ereignisaktionen einrichten
 
-Mit den plentymarkets Ereignisaktionen kannst Du mit deinen Shopify-Bestellungen kommunizieren, indem benutzerdefinierte Ereignisse ausgelöst werden. Weitere Informationen zu Ereignisaktionen findest du xref:automatisierung:ereignisaktionen.adoc#[hier].
+Mit den plentymarkets Ereignisaktionen kannst du mit deinen Shopify-Bestellungen kommunizieren, indem benutzerdefinierte Ereignisse ausgelöst werden. Weitere Informationen zu Ereignisaktionen findest du xref:automatisierung:ereignisaktionen.adoc#[hier].
 
 [#beispiel-ereignisaktion-einrichten]
 ==== Eine Beispiel-Ereignisaktion einrichten
