--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -1291,7 +1291,7 @@ Die verfügbaren Variablen für den EmailBuilder sind in die folgenden Kategorie
 .Variablen in der Kategorie *Auftrag*
 [cols="2,4,3,2"]
 |====
-|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:1[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
 
 | `Auftrag im Webshop aufrufen`
 |Öffnet die URL des Auftrags in deinem Webshop.
@@ -1523,7 +1523,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 .Variablen in der Unterkategorie *Auftrag / Lieferadresse*
 [cols="1,3,2"]
 |====
-|Name der Variable |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Twig expression |Name der alten Variablefootnote:1[]
 
 | `Lieferadresse Adresszusatz`
 | `order.formattedAddresses.deliveryAddress.address3`
@@ -1602,15 +1602,15 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 .Variablen in der Unterkategorie *Auftrag / Rechnungsadresse*
 [cols="1,3,2"]
 |====
-|Name der Variable |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Twig expression |Name der alten Variablefootnote:1[]
 
 | `Rechnungsadresse Adresszusatz`
 | `order.formattedAddresses.invoiceAddress.address3`
-|
+| $BillingAddressAdditionalAddress
 
 | `Rechnungsadresse Firmenname`
 | `order.formattedAddresses.invoiceAddress.name1`
-|
+| $BillingAddressCompany
 
 | `Rechnungsadresse Kontaktperson`
 | `order.formattedAddresses.invoiceAddress.formattedOptions.contactPerson`
@@ -1634,15 +1634,15 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 
 | `Rechnungsadresse Vorname`
 | `order.formattedAddresses.invoiceAddress.name2`
-|
+| $BillingAddressFirstName
 
 | `Rechnungsadresse Vorname und Nachname`
 | `order.formattedAddresses.invoiceAddress.name2 ~ ' ' ~ order.formattedAddresses.invoiceAddress.name3`
-|
+| $BillingAddressFullName
 
 | `Rechnungsadresse Nachname`
 | `order.formattedAddresses.invoiceAddress.name3`
-|
+| $BillingAddressLastName
 
 | `Rechnungsadresse Telefon`
 | `order.formattedAddresses.invoiceAddress.formattedOptions.telephone`
@@ -1682,7 +1682,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 .Variablen in der Unterkategorie *Auftrag / Auftragspositionen (nur für Artikellisten-Widget)*
 [cols="2,4,3,2"]
 |====
-|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:1[]
 
 | `ASIN`
 |Amazon Standard Ident Number (ASIN) des Artikels
@@ -2015,7 +2015,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 .Variablen in der Unterkategorie *Auftrag / Versand*
 [cols="2,4,3,2"]
 |====
-|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:1[]
 
 | `Lieferschein-ID`
 |ID des xref:auftraege:lieferscheine-erzeugen.adoc#[Lieferscheins].
@@ -2102,7 +2102,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 .Variablen in der Unterkategorie *Auftrag / Abonnement*
 [cols="2,4,3,2"]
 |====
-|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:1[]
 
 | `Abonnement-ID`
 |ID des Abonnements. Wird automatisch vom System vergeben und kann _nicht_ geändert werden.
@@ -2145,7 +2145,7 @@ Mögliche Werte: *1 Monat*, *3 Monate*, *6 Monate*, *12 Monate*.
 .Variablen in der Kategorie *Kontakt*
 [cols="2,4,3,2"]
 |====
-|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:1[]
 
 | `Kontoinhaber (Kontakt)`
 | xref:crm:kontakt-bearbeiten.adoc#bankdaten[Kontoinhaber:in] wie im Kontaktdatensatz gespeichert.
@@ -2273,7 +2273,7 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 .Variablen in der Unterkategorie *Kontakt / Lieferadresse*
 [cols="1,3,2"]
 |====
-|Name der Variable |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Twig expression |Name der alten Variablefootnote:1[]
 
 | `Lieferadresse Adresszusatz`
 | `contact.formattedAddresses.deliveryAddress.address3 ~ ' ' ~ contact.formattedAddresses.deliveryAddress.address4`
@@ -2351,7 +2351,7 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 .Variablen in der Unterkategorie *Kontakt / Rechnungsadresse*
 [cols="1,3,2"]
 |====
-|Name der Variable |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Twig expression |Name der alten Variablefootnote:1[]
 
 | `Rechnungsadresse Adresszusatz`
 | `contact.formattedAddresses.invoiceAddress.address3 ~ ' ' ~ contact.formattedAddresses.invoiceAddress.address4`
@@ -2426,7 +2426,7 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 .Variablen in der Unterkategorie *Kontakt / Optionen*
 [cols="1,3,2"]
 |====
-|Name der Variable |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Twig expression |Name der alten Variablefootnote:1[]
 
 | `Zusätzlicher Ansprechpartner`
 | `contact.formattedOptions.additionalContactPerson`
@@ -2481,7 +2481,7 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 .Variablen in der Kategorie *Global*
 [cols="2,4,3,2"]
 |====
-|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:1[]
 
 | `Kontoinhaber (Stammdaten)`
 |Kontoinhaber:in aus den xref:willkommen:schnelleinstieg-basiseinstellungen.adoc#100[Stammdaten] deines plentymarkets Systems. Wird im *Basics*-Assistenten im Schritt *Bankdaten* gespeichert. Du findest den Assistenten im Menü *Einrichtung » Assistenten » Grundeinstellungen*. +
@@ -2661,7 +2661,7 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 .Variablen in der Kategorie *Newsletter*
 [cols="2,5,2,2"]
 |====
-|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:1[]
 
 | `Newsletter Vorname`
 |Vorname der Person, die den xref:crm:newsletter-versenden.adoc#[Newsletter] abonnieren möchte.
@@ -2687,7 +2687,7 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 .Variablen in der Kategorie *Ticket*
 [cols="2,5,2,2"]
 |====
-|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:[Die Informationen in dieser Spalte sind für dich nur relevant, wenn du bereits E-Mail-Vorlagen im Menü *Einrichtung » Mandant » Mandant wählen » E-Mail » Vorlagen* erstellt hast und wissen möchtest, wie die alte Variable hieß. Hinweis: Diese Spalte ist noch nicht vollständig befüllt. Inhalte werden weiterhin ergänzt.]
+|Name der Variable |Erläuterung |Twig expression |Name der alten Variablefootnote:1[]
 
 | `Ticket Backend-URL`
 |Verlinkt zum Ticket im Menü xref:crm:ticketsystem-nutzen.adoc#[CRM » Ticketsystem].
