--- a/docs/en-gb/modules/orders/pages/design-order-view.adoc
+++ b/docs/en-gb/modules/orders/pages/design-order-view.adoc
@@ -351,8 +351,14 @@ This is an optional column.
 Expand the second level (material:chevron_right[]) to see information about the *order items*. For this, the columns listed in the table below are available. +
 *_Note:_* The order items are not the same for all order types.
 
+[TIP]
+.Show order items for all orders by default
+======
+By default, the order items of your orders are not shown in the overview. In the editing mode of the overview, you can however define via the *Order items table default* setting whether to expand or collapse the order items table in the order overview by default. By clicking on *Show all order items*, you are forwarded to the detail view of the order where all order items are listed.
+======
+
 [[table-order-items]]
-.- Order items
+.Order items
 [cols="1,3"]
 |===
 |Setting |Explanation
@@ -381,7 +387,7 @@ This is a default column.
 This is a default column.
 
 | *Item name*
-|Shows the item name of this order item. +
+|Shows the item name of this order item. You can edit (material:edit[]) the item name if needed. +
 This is an optional column.
 
 | *Attributes*
@@ -466,9 +472,9 @@ This is a default column.
 |===
 
 [#show-order-items]
-=== Display or hide order items
+=== Display or hide order item properties
 
-In the order overview, the order items are not displayed by default. If you want to see properties of the order items, such as *Name* or *Value*, go to the line of the order and click on the arrow icon on the left (material:chevron_right[]). At first, you will see information on the order, such as the *Quantity*, *Item ID* or *Variation number*. On this level, click on the arrow symbol (material:chevron_right[]) once again too see the properties. +
+If you want to see the properties of order items, such as *Name* or *Value*, go to the line of the order and click on the arrow icon on the left (material:chevron_right[]). At first, you will see details about the order items, such as the *Quantity*, *Item ID* or *Variation number*. On this level, click on the arrow symbol (material:chevron_right[]) once again too see the properties. +
 *_Note:_* If you want to edit the properties of order items, open the desired order, go to the *Order items* area and click on *Edit items* (material:edit[]).
 
 [#editing-mode]
