--- a/docs/de-de/modules/maerkte/partials/mirakl-first-steps.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-first-steps.adoc
@@ -20,7 +20,9 @@ Um Artikeldaten zu {market} zu exportieren benötigst du die folgenden Plugins:
 * link:{plugin-link}[{plugin-name}^]
 
 :plugin: Mirakl Connector
+:priority: 0
 :main-client:
+:mirakl:
 
 include::partial$plugin-installation.adoc[]
 :!plugin:
