--- a/docs/de-de/modules/maerkte/partials/plugin-installation.adoc
+++ b/docs/de-de/modules/maerkte/partials/plugin-installation.adoc
@@ -33,6 +33,9 @@ ifdef::main-client[*_Hinweis:_* Das Plugin-Set muss mit dem Standardmandanten ve
 ifdef::priority[]
 . Klicke im Menü links auf *Prioritäten festlegen*.
 . Setze die Priorität von *{plugin}* auf {priority}.
+ifdef::mirakl[]
+*_Hinweis:_* Die Priorität des *Mirakl-Plugins* muss niedriger sein als die Priorität von *{plugin}*. So ist sichergestellt, dass beide Plugins fehlerfrei funktionieren.
+endif::mirakl[]
 . Speichere (icon:save[role=green]) die Einstellung. +
 → Das Plugin-Set wird angezeigt.
 endif::priority[]
@@ -40,3 +43,5 @@ endif::priority[]
 . Speichere (icon:save[role=green]) das Plugin-Set. +
 *_Tipp:_* Probleme beim Speichern? Klicke auf *Details öffnen*, um weitere Informationen anzuzeigen.
 --
+
+
