--- a/docs/en-gb/modules/markets/partials/plugin-installation.adoc
+++ b/docs/en-gb/modules/markets/partials/plugin-installation.adoc
@@ -1,7 +1,7 @@
-ifdef::main-client[*_Important:_* Install the plugin of the plugin set of the main client.]
+ifdef::main-client[*_Important:_* Install the plugin in the plugin set for the default client.]
 
 [.collapseBox]
-.*{plugin}*: Adding and installing the plugin
+*{plugin}*: Adding and installing the plugin
 --
 
 [.instruction]
@@ -25,14 +25,17 @@ Installing plugins:
 . Click on the plugin set in which you want to install the plugin. +
 ifdef::main-client[*_Important:_* The plugin set must be linked to the main client. +]
 → The plugin set opens.
-. Click on icon:plus-square[role=green] *Add plugin*.
+. Click on icon:plus-square[role=green]*Add plugin*.
 . Select *{plugin}* from the plugin list.
-. Click on icon:download[role=purple] *Install*. +
+. Click on icon:download[role=purple]*Install*. +
 → The plugin is installed. +
 → The plugin set is shown.
 ifdef::priority[]
 . In the menu on the left, click on *Set priorities*.
 . Set the priority for *{plugin}* to {priority}.
+ifdef::mirakl[]
+*_Note:_* The priority of the *Mirakl plugin* must be lower than the priority of *{plugin}*. This is to ensure a proper functionality of both plugins.
+endif::mirakl[]
 . Save (icon:save[role=green]) the setting. +
 → The plugin set is shown.
 endif::priority[]
