--- a/docs/en-gb/modules/markets/partials/plugin-installation.adoc
+++ b/docs/en-gb/modules/markets/partials/plugin-installation.adoc
@@ -1,4 +1,4 @@
-ifdef::main-client[*_Important:_* Install the plugin in the plugin set for the default client.]
+ifdef::main-client[*_Important:_* Install the plugin in the plugin set of the default client.]
 
 [.collapseBox]
 *{plugin}*: Adding and installing the plugin
@@ -25,9 +25,9 @@ Installing plugins:
 . Click on the plugin set in which you want to install the plugin. +
 ifdef::main-client[*_Important:_* The plugin set must be linked to the main client. +]
 → The plugin set opens.
-. Click on icon:plus-square[role=green]*Add plugin*.
+. Click on icon:plus-square[role=green] *Add plugin*.
 . Select *{plugin}* from the plugin list.
-. Click on icon:download[role=purple]*Install*. +
+. Click on icon:download[role=purple] *Install*. +
 → The plugin is installed. +
 → The plugin set is shown.
 ifdef::priority[]
