--- a/docs/en-gb/modules/markets/partials/plugin-installation.adoc
+++ b/docs/en-gb/modules/markets/partials/plugin-installation.adoc
@@ -1,4 +1,4 @@
-ifdef::main-client[*_Important:_* Install the plugin of the plugin set of the main client.]
+ifdef::main-client[*_Important:_* Install the plugin in the plugin set of the main client.]
 
 [.collapseBox]
 .*{plugin}*: Adding and installing the plugin
@@ -33,6 +33,9 @@ ifdef::main-client[*_Important:_* The plugin set must be linked to the main clie
 ifdef::priority[]
 . In the menu on the left, click on *Set priorities*.
 . Set the priority for *{plugin}* to {priority}.
+ifdef::mirakl[]
+*_Note:_* The priority of the *Mirakl plugin* must be lower than the priority of *{plugin}*. This is to ensure a proper functionality of both plugins.
+endif::mirakl[]
 . Save (icon:save[role=green]) the setting. +
 → The plugin set is shown.
 endif::priority[]
