--- a/docs/de-de/modules/external-online-shops/pages/shopify-plugin.adoc
+++ b/docs/de-de/modules/external-online-shops/pages/shopify-plugin.adoc
@@ -122,7 +122,7 @@ Weitere Shops verbinden:
 
 | *Auftragsimport* 
 | * alle 15 Minuten +
-Nach dem ersten Auftragsimport werden nur Shopify-Bestellungender letzten 24 Stunden importiert. Bereits ausgeführte Shopify-Bestellungen werden nicht importiert. +
+Nach dem ersten Auftragsimport werden nur Shopify-Bestellungen der letzten 24 Stunden importiert. Bereits ausgeführte Shopify-Bestellungen werden nicht importiert. +
 
 Folgende Daten werden importiert: +
 
@@ -160,8 +160,7 @@ Wird basierend auf Artikelzuordnungen ausgeführt, die durch den Artikelimport e
 | * alle 15 Minuten +
 Exportiert Warenbestand und Preisdaten, ohne den *Artikelexport* zu verwenden. +
 Exportiert werden Warenbestand und Preisdaten für alle Varianten, bei denen sich der Bestand in den letzten 15 Minuten geändert hat. Der *UVP(Shopify: Compare at Price)* wird bei diesem Vorgang nicht synchronisiert. +
-*_Hinweis:_* Varianten, bei denen nur eine Preisänderung stattgefunden hat, werden nicht exportiert. Diese Varianten werden erst
-exportiert, wenn sich auch ihr Bestand geändert hat. +
+*_Hinweis:_* Varianten, bei denen nur eine Preisänderung stattgefunden hat, werden nicht exportiert. Diese Varianten werden erst exportiert, wenn sich auch ihr Bestand geändert hat. +
 
 * Bei Nutzung des Warenbestand- und Preisexports in Kombination mit dem Artikelexport: +
 Wenn du in plentymarkets eine neue Variante erstellst oder eine SKU hinzufügst oder änderst, wird die Variante innerhalb von einer Stunde exportiert. Danach prüft plentymarkets Bestands- und Preisänderungen alle 15 Minuten. +
@@ -622,7 +621,7 @@ Cleanup planen:
 Mit den plentymarkets Ereignisaktionen kannst du mit deinen Shopify-Bestellungen kommunizieren, indem benutzerdefinierte Ereignisse ausgelöst werden. Weitere Informationen zu Ereignisaktionen findest du xref:automatisierung:ereignisaktionen.adoc#[hier].
 
 [#beispiel-ereignisaktion-einrichten]
-==== Eine Beispiel-Ereignisaktion einrichten
+=== Eine Beispiel-Ereignisaktion einrichten
 
 [.instruction]
 Beispiel-Ereignisaktion einrichten:
