--- a/docs/en-gb/modules/external-online-shops/pages/shopify-plugin.adoc
+++ b/docs/en-gb/modules/external-online-shops/pages/shopify-plugin.adoc
@@ -56,7 +56,7 @@ Creating a custom app and generating API credentials:
 *_Note:_* The API credentials for the custom app are *only shown once*. Save the Admin API access token in a safe location.
 
 [#order-referrer]
-== Activate the order referrer Shopify in plentymarkets
+== Activating the order referrer
 
 The plugin interface becomes visible once you activate the order referrer *Shopify*.
 
@@ -70,11 +70,10 @@ Activating an order referrer:
 
 *_Note:_* Note that the plugin cannot use order referrers that were created manually. The plugin must be installed in the plugin set that is linked to the default client.
 
-
 [#plugin-configuration]
-== Configuring the plugin
+== Setting up the Shopify plugin 
 
-The following chapters walk you through the plugin options and their configuration.
+Now set up the Shopify plugin in your plentymarkets system.
 
 [#connection-shopify-api]
 === Connecting with the Shopify API
@@ -112,9 +111,9 @@ Connecting additional shops:
 web shop from the *Webshops* area.
 
 [#plugin-settings]
-=== Carrying out plugin settings
+=== Carrying out the settings for the Shopify plugin
 
-*_Note:_* Note that item related *import/export processes* cannot be active at the same time.
+*_Note:_* Note that item related import and export processes cannot be active at the same time.
 
 [[table-shopify-plugin-settings]]
 .Settings in the *Plugin settings* tab
@@ -125,9 +124,8 @@ web shop from the *Webshops* area.
 2+| *Processes*
 
 | *Order import*
-| Runs every 15 minutes. +
-After a first *order import*, the plugin only imports Shopify orders posted in the last 24 hours. The plugin does not import orders which have already been *fulfilled* on
-Shopify. +
+| * every 15 minutes +
+After a first order import, only Shopify orders posted in the last 24 hours will be imported. Orders which have already been fulfilled on Shopify will not be imported. +
 
 The following data is imported: +
 
@@ -144,7 +142,7 @@ The following data is imported: +
 * Item prices excluding surcharges and discounts
 * Discounts
 * Payment method +
-→ *_Note:_* The plugin recognizes the payment methods *Paypal* and *Cash in advance* if a payment method with that name exists on Shopify.  All other payment methods are imported as *Shopify Direct Checkout*. +
+→ *_Note:_* The plugin recognizes the payment methods *Paypal* and *Cash in advance* if a payment method with that name exists on Shopify. All other payment methods are imported as *Shopify Direct Checkout*. +
 * Shipping profile +
 → Based on *shipping profile mappings*. +
 * Properties
@@ -152,41 +150,42 @@ The following data is imported: +
 *_Note:_* The VAT rate is assigned by plentymarkets if a match is found. If no match is found, the standard VAT rate from pelntymarkets is assigned. To handle Shopify gift cards, create a plentymarkets item with 0% VAT and the same SKU as the Shopify gift card. During the order import, the SKU is matched and the Shopify gift card is assigned to the plentymarkets item automatically.
 
 | *Customer import*
-| Runs once a day. +
+| * once a day +
 Imports the Shopify customer base into plentymarkets. +
-*_Note:_* The plugin also imports contact details during the order import. For more information, see <<#gdpr, GDPR considerations>>.
+*_Note:_* Contact details are also imported during the order import. For more information, see <<#gdpr, GDPR considerations>>.
 
 | *Stock and price import*
-| Runs *hourly* for up to 1000 entries and *once a day* for more than 1000 entries. +
-This process is based on item mappings created during the *item import*. This process can only run after an initial *item import*. The *RRP (Shopify: Compare at Price)* is not updated during this process.
+| * hourly for up to 1000 entries +
+* once a day for more than 1000 entries +
+This process is based on item mappings created during the item import. This process can only be carried out after an initial item import. The *RRP (Shopify: Compare at Price)* is not updated during this process.
 
 | *Stock and price export*
-| Runs every 15 minutes. +
+| * every 15 minutes +
 Exports stock and prices without using the *item export*. +
-Exports stock and prices for variations with stock changes within the last 15 minutes. The *RRP (Shopify: Compare at Price* is not updated during this process. +
+Exports stock and prices for variations with stock changes within the last 15 minutes. The *RRP (Shopify: Compare at Price)* is not updated during this process. +
 *_Note:_* Variations for which only the price was changed will not be exported. Those variations will only be exported after the stock has changed.
  +
 
-_When using the stock and price export combined with the item export:_ +
+* When using the stock and price export combined with the item export: +
 If you create a new variation in plentymarkets or if you change or add an SKU, then the variation will be exported within an hour. Afterwards, plentymarkets will check stock and price changes every 15 minutes. +
 
-_When using the stock and price export without the item export:_ +
+* When using the stock and price export without the item export: +
 If you create a new variation in plentymarkets or if you change or add an SKU, then stock changes for this variation will be exported within 24 hours during the night. +
 _Why?_ All SKUs and variation IDs have to be synchronised between plentymarkets and Shopify prior to the export. Because of the huge amount of data, this process can only be executed once a day.
 
 | *Category import*
-| Runs once a day. +
+| * once a day +
 Imports manual *collections* as categories. +
-*_Note:_* *Collections* linked to an item will also be imported during the *item import*. +
+*_Note:_* *Collections* linked to an item will also be imported during the item import. +
 *_Important:_* The plugin does not support *automatic Shopify collections*. Images mapped with a category will not be imported.
 
 | *Category export*
-| Runs once a day. +
-Exports all categories as manual *Shopify collections*. Categories linked to an item can also be exported with the *item export*. +
-*_Note:_* Shopify does not support category trees. Therefore, the plugin will always only export the sub-category. Images mapped with a category will not be imported.
+| * once a day +
+Exports all categories as manual *Shopify collections*. Categories linked to an item can also be exported with the item export. +
+*_Note:_* Shopify does not support category trees. Therefore, only the sub-category will be exported. Images mapped with a category will not be imported.
 
 |*Item import*
-| Runs once a day. +
+| * once a day +
 Imports your Shopify items into plentymarkets. +
 
 The following data is imported:
@@ -210,7 +209,7 @@ The following data is imported:
 * Manufacturing country
 
 | *Item export*
-| Runs *once a day* for the inital import and afterwards *hourly* for updates. +
+| * once a day for the initial import and afterwards hourly for updates +
 Exports your items to Shopify. +
 *_Note:_* If you delete Shopify items to export them once again, then the item export will take one more day to clean up the plugin data base. This has to be done before items which were deleted can be exported again. +
 
@@ -232,7 +231,7 @@ The following data is exported: +
 * Sales price +
 → The sales price with the lowest position within the item. +
 * Recommended retail price +
-→ plentymarkets exports the *RRP* to the field *Compare at Price* in Shopify. According to the Shopify rules, the *Compare at Price* *must* be higher than the sales price. If you want to remove the exported *Compare at Price* from an item in Shopify, then the exported *RRP* in plentymarkets has to be *0*. The price will then be removed. If you delete the *RRP* from the item in plentymarkets, then this change will not be transferred to Shopify. +
+→ plentymarkets exports the *RRP* to the field *Compare at Price* in Shopify. According to the Shopify rules, the *Compare at Price* _must_ be higher than the regular sales price. If you want to remove the exported *Compare at Price* from an item in Shopify, then the exported *RRP* in plentymarkets has to be *0*. The price will then be removed. If you delete the *RRP* from the item in plentymarkets, then this change will not be transferred to Shopify. +
 * SKU
 * Barcode
 * Stock +
@@ -247,7 +246,7 @@ The following data is exported: +
 * Properties
 
 | *Update order payments*
-| Runs hourly. +
+| * hourly +
 Checks whether payments for already imported orders were made in Shopify and imports those payments.
 
 2+| *Data exchange*
@@ -267,10 +266,10 @@ Checks whether payments for already imported orders were made in Shopify and imp
 *_Note:_* Note that all translatable input fields have to be set up. Otherwise, this function will not work properly.
 
 | *Stock buffer*
-| Whenever stock is exported to Shopify, the plugin will subtract the amount entered as stock buffer.
+| Whenever stock is exported to Shopify, the amount entered as stock buffer will be subtracted.
 
 | *When exporting an item, also export its categories*
-| Export categories linked to an item with the *item export*.
+| Export categories linked to an item with the item export.
 
 | *Import SKU into variation no.*
 | Imports SKUs from Shopify items to the input field *Variation no.*. +
@@ -294,7 +293,7 @@ Checks whether payments for already imported orders were made in Shopify and imp
 *_Note:_* The order import date is updated after each run to reflect the last time an order import has been carried out.
 
 | *Import address details as follows*
-| _Possible options:_ +
+| _Possibilities:_ +
 
 * Shopify address 1 to plentymarkets address 1
 * Shopify address 2 to plentymarkets address 2
@@ -312,8 +311,7 @@ Shopify address 2 is empty
 | Select an order status for incoming cancelation requests.
 
 | *Automatically deny incoming cancelation requests from status*
-| Incoming cancellation requests are automatically denied with this status and
-higher.
+| Incoming cancellation requests with this status and higher are automatically denied.
 
 | *Status for successfully refunded orders*
 | Successfully refunded orders are automatically moved to this order status.
@@ -322,7 +320,7 @@ higher.
 [#variation-limitation]
 === Setting up the stock limitation for variations
 
-The plugin also exports the stock *limitation* setting to the Shopify field *Continue selling when out of stock*.
+The stock *limitation* setting is exported to the Shopify field *Continue selling when out of stock*.
 
 [[table-shopify-variation-limitations]]
 .Settings for variation stock limitations
@@ -343,27 +341,27 @@ The plugin also exports the stock *limitation* setting to the Shopify field *Con
 [#custom-order-properties]
 === Importing custom order properties
 
-You can also export custom order properties from the Shopify order. To do so, for example, you can use the https://apps.shopify.com/product-personalizer[Product Personalizer plugin], which allows you to record custom notes.
+You can also import custom order properties from the Shopify order. To do so, for example, you can use the https://apps.shopify.com/product-personalizer[Product Personalizer plugin^], which allows you to record custom notes.
 
-If you want to import such properties, make sure that the plentymarkets item has a *characteristic* for which the option *Order characteristic* is activated. This characteristic is required so that the custom notes from the Personalizer plugin can also be imported.
+If you want to import such properties, make sure that the plentymarkets item has a *characteristic* for which the option *Order characteristic* is *activated*. The characteristic is required so that the Shopify plugin will import custom notes from the Personalizer plugin.
 
 [#linking-shipping-profiles]
 === Linking shipping profiles
 
-Enables the *order import* to link plentymarkets shipping profiles with shipping profiles from Shopify.
+Now, link your plentymarkets shipping profiles with shipping profiles in Shopify.
 
 [.instruction]
 Linking shipping profiles:
 
 . Go to *Setup » Markets » Shopify » Shipping profile mapping*.
-. Select an online shop that you want to use this function for.
+. Select an online shop.
 . Select a Shopify *shipping profile*.
 . Select a plentymarkets *shipping profile*.
 . *Save* the settings. +
 → The new mapping is shown in the mapping list.
 
 [#input-field-mappings]
-=== Mapping input fields
+=== Mapping Shopify input fields
 
 Select which plentymarkets data should be exported to Shopify input fields.
 
@@ -376,7 +374,7 @@ Mapping input fields:
 . Select a plentymarkets *input field*.
 . *Save* the settings. +
 → The new mapping is shown in the mapping list. +
-*_Note:_* Input fields are only available in the *item export*.
+*_Note:_* Input fields are only available in the item export.
 
 [[table-shopify-input-fields]]
 .Input field mappings
@@ -413,9 +411,10 @@ Mapping input fields:
 * Gross weight
 
 | *Metafield on Product Variant*
-| Enables the export of the variations *availability* name or a *property* to a custom Shopify *metafield*. +
+| Enables the export of the variations *availability name* or a *property* to a custom Shopify *metafield*. +
 
 [.instruction]
+Mapping a metafield:
 
 . Select *Metafield on Product Variant*.
 . Define a *namespace*. +
@@ -426,28 +425,27 @@ _Maximum length:_ 20 characters.
 *_Note:_* Shopify metafields will not be visible in the Shopify back end without specific apps. For more information about Shopify metafields,consult the *Shopify Help Center* and use the keyword *Metafield.*
 |===
 
-[#warehouse-mappings]
-=== Mapping warehouses
+[#mapping-warehouses]
+=== Assign warehouses
 
-plentymarkets warehouses have to be mapped with Shopify warehouses so that stock can be synchronised. This function only has an influence on the stock synchronisation and on instances where the *Send shipping confirmation* event procedure is being carried out.
-The warehouse mapping during the *order import* is not affected by this function. It is carried out by the system, independently of plugin functions.
+plentymarkets warehouses have to be mapped with Shopify warehouses so that stock can be synchronised. This function only affects the stock synchronisation and the event procedure *Send fulfilment notification to Shopify*. +
+The warehouse mapping during the order import is not affected by this function. This mapping is carried out independently of the Shopify plugin.
 
 [.instruction]
 Mapping warehouses:
 
 . Go to *Setup » Markets » Shopify » Warehouse to location mapping*.
-. Select an online shop that you want to use this function for.
+. Select an online shop.
 . Click on *Add* (material:add[]).
 . Select one or more plentymarkets *warehouses*.
 . Select a Shopify *location*.
 . *Save* the settings. +
 → The new mapping is shown in the mapping list.
 
-[#mapping-tags-with-customer-classes]
+[#tags-customer-class-mapping]
 === Mapping Shopify customer tags with plentymarkets customer classes
 
-Enables the mapping of Shopify customer tags to a plentymarkets customer
-class.
+Map Shopify customer tags to a plentymarkets customer class.
 
 *_Note:_* Each mapping can only contain one customer tag. Multiple customer tags can be mapped to the same plentymarkets customer class by creating separate mappings.
 
@@ -455,7 +453,7 @@ class.
 Mapping customer classes:
 
 . Go to *Setup » Markets » Shopify » Customer class mapping*.
-. Select an online shop that you want to use this function for.
+. Select an online shop.
 . Enter a Shopify *customer tag*.
 . Select a plentymarkets *customer class*.
 . *Save* the settings. +
@@ -464,7 +462,7 @@ Mapping customer classes:
 [#plugin-help]
 == Plugin help
 
-In the Plugin help tab, you can:
+In the *Help* tab of the Shopify plugin, you can use the following functions:
 
 * Check the plugin’s health.
 * Check variation export conditions.
@@ -482,16 +480,15 @@ Checking the plugin’s health:
 . Go to *Setup » Markets » Shopify » Help » Plugin health*.
 . Click on *Check*.
 
-The following conditions will be checked:
+The following conditions are checked:
 
 * The *Shopify* referrer under *Setup » Orders » Order referrer* must be active.
-* There is more than one *Shopify* referrer entry under *Setup » Orders » Order referrer*. Make sure that the ID with the highest number is active.
-
-* Can plentymarkets connect to *Shopify.com*?
+* There is more than one *Shopify* referrer entry under *Setup » Orders » Referrer*. Make sure that the ID with the highest number is active.
+* A connection to Shopify.com can be established.
 * The *SDK file* is deployed correctly.
 
-Passed conditions are marked with a green *OK*.
-Failed conditions are marked with a red *X*.
+Conditions that are fulfilled are marked with a green *OK*.
+Conditions that have failed are marked with a red *X*.
 
 [#check-export-conditions]
 === Checking export conditions for variations
@@ -513,16 +510,16 @@ section, checkbox *Active* must be set.
 → *Item » Variation » Availability* » section *Markets, Shopify* must be assigned.
 * The *Variation » Client* assignment matches your *online shop* selection. +
 → *Item » Variation » Availability*, *Client* section, client selection.
-* The item must contain an *item text*. +
+* An *item text* must be saved for the item. +
 → *Item » Texts » Item text* must be entered.
-* The item must have a *name*. +
+* A *name* must be saved for the item. +
 → *Item » Texts » Name 1* must be entered.
 * The variation must have an SKU for Shopify. +
 → *Item » Variation » Avaialbility*, *SKU* section must contain an *SKU* for the referrer *Shopify*.
 * Exported items must not contain more than 100 variations. This limit is set by Shopify.
 
-Passed conditions are marked with a green *OK*.
-Failed conditions are marked with a red *X*.
+Conditions that are fulfilled are marked with a green *OK*.
+Conditions that have failed are marked with a red *X*.
 
 *_Note:_* Exporting the item’s sales price is not mandatory.
 
@@ -558,7 +555,7 @@ If you want to export stock quantities for items with an older *last change* dat
 Setting a start date:
 
 . Go to *Setup » Markets » Shopify » Help » Stock export*.
-. Select an online shop.
+. Select an online shop for which you want to reset the start date of the *stock and price export*.
 . Select a start date from the *calendar*.
 . Enter *hours* and *minutes*.
 . *Save* the settings. +
@@ -591,7 +588,7 @@ Manually exporting stock and sales price of an item:
 [#plentymarkets-id]
 == Finding the plentymarkets order ID by using the Shopify order number
 
-If a customer contacts you with the Shopify order Id, then you can use this ID to find out the corresponding plentymarkets order ID.
+If a customer contacts you with the Shopify order ID, then you can use this ID to find out the corresponding plentymarkets order ID.
 
 [arabic]
 . Go to *Setup » Markets » Shopify » Help » Find Shopify order number*.
@@ -603,19 +600,19 @@ If a customer contacts you with the Shopify order Id, then you can use this ID t
 [#item-export-cleanup]
 == Planning an item export cleanup
 
-*_Note:_* Do not use the cleanup process after your items were imported from Shopify after installing the plugin. This may lead to items being deleted on Shopify! The cleanup will only be carried out once. If required, plan a new cleanup.
-
 Carry out a cleanup when: 
 
-* You have deleted or deactivated items/variations from plentymarkets and you also need them removed from Shopify.
-* You have manually deleted items/variations from Shopify and they are not re-exported by the plugin.
+* You have deleted or deactivated items or variations from plentymarkets and you also need them removed from Shopify.
+* You have manually deleted items or variations from Shopify and they are not re-exported by the plugin.
 * You want to delete all items from Shopify and start a new item export from plentymarkets. In this case, deactivate the item export and delete all items from Shopify. Plan a cleanup. You can reactivate the item export the next morning.
+
+*_Note:_* Do not use the cleanup process after your items were imported from Shopify after installing the plugin. This may lead to items being deleted on Shopify! The cleanup will only be carried out once. If required, plan a new cleanup.
 
 [.instruction]
 Cleanup planen:
 
 . Go to *Setup » Markets » Shopify » Help » Clean up exported items*.
-. Select the online shop that you want to plan a cleanup for.
+. Select the *online shop* that you want to plan a cleanup for.
 . Click on *Schedule a cleanup for exported items tonight*.
 
 *_Note:_* Items and variations that were already exported will be deleted from Shopify if:
@@ -631,7 +628,7 @@ plentymarkets event procedures enable you to communicate with your
 orders on Shopify by triggering user defined events. For further information, refer to the xref:automation:event-procedures.adoc#[Event procedures] page.
 
 [#set-up-event-procedure]
-==== Example: Setting up an event procedure procedure
+=== Example: Setting up an event procedure procedure
 
 [.instruction]
 Setting up an exemplary event procedure:
