Included pages in nav.adoc

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -346,7 +346,7 @@
 ***** xref:daten:variationsupplier.adoc[VariationSupplier]
 ***** xref:daten:variationwarehouse.adoc[VariationWarehouse]
 *** xref:daten:statistiken.adoc[Statistiken (alte Funktion)]
-* xref:webshop:webshop.adoc[Webshop]
+* xref:webshop:webshop.adoc[plentyShop]
 ** xref:webshop:ceres-einrichten.adoc[plentyShop LTS einrichten]
 ** xref:webshop:io-einrichten.adoc[IO einrichten]
 ** xref:webshop:shop-builder.adoc[ShopBuilder einrichten]
@@ -372,6 +372,8 @@
 *** xref:webshop:webinar-css.adoc[Begleitmaterial zum Webinar Das Einmaleins des Shop-Designs]
 ** xref:webshop:webshop-plugins.adoc[Weitere Webshop-Plugins]
 ** xref:webshop:webshop-einrichten.adoc[Alt: Callisto-Webshop einrichten]
+* Externe Webshops
+** xref:externe-webshops:shopify-plugin.adoc[Shopify-Plugin]
 * xref:maerkte:maerkte.adoc[Märkte und Preisportale]
 ** xref:maerkte:preisportale.adoc[Preisportale]
 *** xref:maerkte:basic-price-search-engine.adoc[Basic Price Search Engine]
