--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -437,15 +437,15 @@ Diese Spalte ist eine Standardspalte.
 
 |*Artikel-ID*
 |Zeigt die ID des Artikels an. Wenn du auf die Artikel-ID klickst, gelangst du direkt in die Einstellungen des jeweiligen Artikels. +
-Diese Spalte ist keine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 |*Varianten-ID*
 |Zeigt die Varianten-ID an. Wenn du auf die Varianten-ID klickst, gelangst du direkt in die Einstellungen der Variante. +
-Diese Spalte ist keine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 |*Artikel-ID/Varianten-ID*
 |Zeigt die Artikel-ID und die Varianten-ID kombiniert und nicht in zwei separaten Spalten an. Wenn du auf die Artikel-ID oder die Varianten-ID klickst, gelangst du direkt in die Einstellungen des jeweiligen Artikels bzw. der Variante. +
-Diese Spalte ist keine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 |*Variantennummer*
 |Zeigt die Variantennummer an. Wenn du auf die Variantennummer klickst, gelangst du direkt in die Einstellungen der jeweiligen Variante. +
@@ -465,11 +465,11 @@ Diese Spalte ist eine Standardspalte.
 
 |*Barcode*
 |Zeigt den Barcode des Artikels an. +
-Diese Spalte ist keine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 | *System-EK*
 |Zeigt den Einkaufspreis des Systems an. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 |[#intable-item-search-price-selection]*Preisauswahl*
 |In einer Dropdown-Liste werden dir alle für diesen Auftrag ermittelten Verkaufspreise angezeigt. Du kannst einen der angezeigten Preise wählen, der dann als Grundlage für die weiteren Auftragsberechnungen verwendet wird. Enthält der Preis einen Rabatt, wird dies hinter dem Preisnamen und dem Betrag angezeigt. Die Spalten *Kundenklassenrabatt* und *Kategorierabatt* zeigen den Prozentsatz des angewendeten Rabatts an. +
@@ -479,23 +479,23 @@ Diese Spalte ist eine Standardspalte.
 
 | *Kategorierabatt*
 |Zeigt den für den ausgewählten Verkaufspreis angewendeten Kategorierabatt in Prozent an. +
-Diese Spalte ist keine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 | *Kundenklassenrabatt*
 |Zeigt den für den ausgewählten Verkaufspreis angewendeten Kundenklassenrabatt in Prozent an. +
-Diese Spalte ist keine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 | *Verfügbarkeit*
 |Zeigt die Verfügbarkeit des Artikels an. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 | *Netto-WB*
 |Zeigt den Netto-Warenbestand des Artikels an. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 | *Lager*
 |Zeigt das Lager des Artikels an. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 |*Menge*
 |Gib die Menge ein, in der der Artikel dem Warenkorb hinzugefügt werden soll. Du kannst nur ganze Zahlen eingeben, negative Mengen oder Mengen, die den Nettobestand übersteigen, sind nicht erlaubt. In diesem Fall wird eine Fehlermeldung angezeigt. Wenn die hinzugefügte Menge den Nettobestand auf = oder niedriger setzt, wird der Statusbalken für die Bestandsanzeige auf rot gesetzt. +
@@ -551,47 +551,47 @@ Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche
 
 | *Menge*
 |Zeigt die Menge der Artikel an. Passe die Menge bei Bedarf an. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 | *Artikel-ID*
 |Zeigt die Artikel-ID an. Mit Klick auf die ID wird der Artikel geöffnet. +
-Diese Spalte ist keine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 | *Varianten-ID*
 |Zeigt die Varianten-ID der Auftragsposition an. Mit Klick auf die ID wird die Variante geöffnet. +
-Diese Spalte ist keine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 | *Artikel-ID* / *Varianten-ID*
 |Zeigt sowohl die Artikel-ID als auch die Varianten-ID an. +
-Diese Spalte ist //
+Diese Spalte ist keine Standardspalte.
 
 | *Variantennummer*
 |Zeigt die Nummer der Variante an. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 | *Artikelname*
 |Zeigt den Namen des Artikels an. Passe den Namen bei Bedarf an (material:edit[]). +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 | *Attribute*
 |Zeigt die Attribute an. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 | *Variantenname*
 |Zeigt den Namen der Variante an. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 | *Barcode*
 |Zeigt den Barcode des Artikels an. +
-Diese Spalte ist //
+Diese Spalte ist keine Standardspalte.
 
 | *System-EK*
 |Zeigt den Einkaufspreis des Systems an. +
-Diese Spalte ist //
+Diese Spalte ist keine Standardspalte.
 
 | *Preisauswahl*
 |Zeigt die Preisauswahl an. Wähle bei Bedarf eine andere Preisauswahl aus der Dropdown-Liste. +
-Diese Spalte ist keine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 | *Kategorierabatt*
 |Zeigt den für den ausgewählten Verkaufspreis angewendeten Kategorierabatt in Prozent an. +
@@ -604,36 +604,36 @@ Diese Spalte ist keine Standardspalte.
 | *Nettopreis*
 |Zeigt den Nettopreis des Artikels an. +
 Über material:edit[] kannst du das Datenfeld Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 | *Regulärer Nettopreis*
 |Zeigt den regulären Nettopreis des Artikels an. +
-Diese Spalte ist //
+Diese Spalte ist keine Standardspalte.
 
 | *Bruttopreis*
 |Zeigt den Bruttopreis des Aritkels an. Über material:edit[] kannst du das Datenfeld Bruttopreis bearbeiten. Der Nettopreis wird automatisch angepasst. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 | *Aufpreis gesamt*
 |Zeigt die Summe der Aufpreise für Bestelleigenschaften an. +
-Diese Spalte ist //
+Diese Spalte ist keine Standardspalte.
 
 | *Rabatt*
 |Zeigt den Rabatt an, der in den Auftragsdetails im ersten Schritt der Auftragsanlage eingegeben wurde. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 | *Gesamtbetrag (brutto)*
 |Zeigt den Brutto-Gesamtbetrag des Artikels an. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 | *Lager*
 |Zeigt das Lager des Artikels an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 |*USt. (%)*
 |Die Umsatzsteuer wird in % angezeigt. +
 Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern. +
-Diese Spalte ist //
+Diese Spalte ist eine Standardspalte.
 
 |===
 
